# k8s-autogen

./: README.md  kubectl_executor_simple.py  main.py  pyproject.toml
